--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,22 @@
 server {
   listen 80;
 
-  location /_next/ {
-    proxy_pass http://web:3000/_next/;
+  location / {
+    proxy_pass http://web:3000;
     proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
 
   location /api/ {
     proxy_pass http://api:4000/;
     proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
   }
 
-  location / {
-    proxy_pass http://web:3000;
-    proxy_set_header Host $host;
+  location /ws/ {
+    proxy_pass http://api:4000/ws/;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
   }
 }
